Fixed cupcake details display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,5 @@ div.content {
 div.content > div {
   display: flex;
   flex-grow: 1;
+  max-width: 100%;
 }
